--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementList.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementList.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Intouch.Edm.Views.Templates"
              xmlns:control="clr-namespace:Intouch.Edm.Controls"
+             xmlns:local="clr-namespace:Intouch.Edm.Views.Templates"
              x:Class="Intouch.Edm.Views.AnnouncementList"
              NavigationPage.HasNavigationBar="False"
              IsEnabled="{Binding IsBusy, Converter= {StaticResource reverseBoolean}}"
@@ -14,14 +14,14 @@
         <ResourceDictionary>
             <DataTemplate x:Key="evenTemplate">
                 <ViewCell>
-                    <Frame BackgroundColor="White" CornerRadius="10" HasShadow="True" OutlineColor="#dcdcdc">
+                    <Frame BackgroundColor="White" CornerRadius="15" HasShadow="True" OutlineColor="#dcdcdc">
                         <local:AnnouncementListTemplate />
                     </Frame>
                 </ViewCell>
             </DataTemplate>
             <DataTemplate x:Key="unevenTemplate">
                 <ViewCell>
-                    <Frame BackgroundColor="#eeeeee" CornerRadius="10" HasShadow="True" OutlineColor="#dcdcdc">
+                    <Frame BackgroundColor="#eeeeee" CornerRadius="15" HasShadow="True" OutlineColor="#dcdcdc">
                         <local:AnnouncementListTemplate />
                     </Frame>
                 </ViewCell>
@@ -32,11 +32,23 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout>
+
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill" Margin="8,8">
+            <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*" />
+                    <ColumnDefinition Width="60*" />
+                </Grid.ColumnDefinitions>
+                <Image Grid.Row="0" Grid.Column="0" Source="announcement_0.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+            </Grid>
             <ListView x:Name="AnnouncementListView"
                 ItemsSource="{Binding AnnouncementItems}"
                 ItemAppearing="ListView_ItemAppearing"
-                Margin="0,5,0,0"
+                Margin="10,5,10,0"
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
                 RefreshCommand="{Binding LoadAnnouncementsCommand}"
