ADK dan secilen kayıtların task-option durumlarının görüntülenmesi için geliştirim tamamlandı.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioTaskOptionsPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioTaskOptionsPage.xaml
@@ -37,7 +37,7 @@
                                         <Image Source="tick.png"  IsVisible="{Binding IsSelected}"
                                     VerticalOptions="Center"  HeightRequest="40"
                                     WidthRequest="40" />
-                                        <Label Text="{Binding Id}" HorizontalOptions="StartAndExpand" />
+                                        <Label Text="{Binding UserFullName}" HorizontalOptions="StartAndExpand" />
                                     </StackLayout>
                                 </ViewCell.View>
                             </ViewCell>
