--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UserTaskOptionsPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UserTaskOptionsPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              mc:Ignorable="d"
              x:Class="Intouch.Edm.Views.UserTaskOptionsPage">
     <ContentPage.Resources>
@@ -15,6 +16,7 @@
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
+
     <ScrollView>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
@@ -26,33 +28,45 @@
                         <ColumnDefinition Width="40*" />
                         <ColumnDefinition Width="60*" />
                     </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
                 </Grid>
             </StackLayout>
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Button CornerRadius="7"
+            <Label Text="Görev ve Görevli Kişiler" Font="Bold,25" Margin="0,15,0,5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+            <Button CornerRadius="7"
                         FontSize="Large"
                         TextColor="White"
                         BackgroundColor="#00a9ab"
                         FlexLayout.AlignSelf="Stretch"
                         HorizontalOptions="FillAndExpand"
-						VerticalOptions="EndAndExpand"
+						VerticalOptions="Fill"
 						Text="ARA - Kullanıcı ismi Dinamik"
-                        Margin="3,5,3,50"/>
-            </StackLayout>
+                        Margin="3,5,3,50" />
             <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                <ListView x:Name="TaskListView" ItemsSource="{Binding StatusRecords}"  HeightRequest="250">
+                <ListView x:Name="TaskListView"
+                          ItemsSource="{Binding StatusRecords}"
+                          HasUnevenRows="True"
+                          SeparatorVisibility="None"
+                          HorizontalOptions="FillAndExpand"
+                          VerticalOptions="Fill"
+                          Margin="20,10,20,0">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <ViewCell.View>
-                                    <StackLayout HorizontalOptions="FillAndExpand"
-                                    Orientation="Horizontal" Padding="10  ">
-                                        <Label Text="{Binding Name}" HorizontalOptions="StartAndExpand" />
-                                        <Image Source="tick.png"  IsVisible="{Binding IsSelected}"
-                                    VerticalOptions="Center"  HeightRequest="40"
-                                    WidthRequest="40" />
-                                    </StackLayout>
-                                </ViewCell.View>
+                                <StackLayout Orientation="Horizontal">
+                                    <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Center" HasShadow="True" OutlineColor="{StaticResource NavigationPrimary}">
+                                        <input:CheckBox Text="{Binding Name}"
+                                                        IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                                        Type="Material"
+                                                        IsEnabled="False"
+                                                        VerticalOptions="Center"
+                                                        HorizontalOptions="StartAndExpand"
+                                                        Color="#36b87a"
+                                                        LabelPosition="Before"
+                                                        TextColor="Black"
+                                                        BindingContext="{Binding .}" />
+                                    </Frame>
+                                </StackLayout>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
