--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioTaskOptionsPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioTaskOptionsPage.xaml
@@ -3,77 +3,72 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              x:Class="Intouch.Edm.Views.ScenarioTaskOptionsPage">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style x:Key="LableStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="Black" />
-                <Setter Property="FontSize" Value="Medium" />
-                <Setter Property="HorizontalOptions" Value="Center"></Setter>
-                <Setter Property="VerticalOptions" Value="Center"></Setter>
-            </Style>
-        </ResourceDictionary>
-    </ContentPage.Resources>
-
-    <ScrollView>
-        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40*" />
-                        <ColumnDefinition Width="60*" />
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
-                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
-                </Grid>
-            </StackLayout>
-            <Label Text="Görev ve Görevli Kişiler" Font="Bold,25" Margin="0,15,0,5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                <ListView x:Name="TaskListView"
+    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+            <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*" />
+                    <ColumnDefinition Width="60*" />
+                </Grid.ColumnDefinitions>
+                <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+            </Grid>
+        </StackLayout>
+        <Label Text="Görev ve Görevli Kişiler" Font="Bold,30" Margin="0,15,0,5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+            <ListView x:Name="TaskListView"
                           ItemsSource="{Binding StatusRecords}"
                           HasUnevenRows="True"
                           SeparatorVisibility="None"
                           HorizontalOptions="FillAndExpand"
                           VerticalOptions="Fill"
                           Margin="20,10,20,0">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal">
-                                    <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Center" HasShadow="True" OutlineColor="{StaticResource NavigationPrimary}">
-                                        <input:CheckBox Text="{Binding Name}"
-                                                        IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                                                        Type="Material"
-                                                        IsEnabled="False"
-                                                        VerticalOptions="Center"
-                                                        HorizontalOptions="StartAndExpand"
-                                                        Color="#36b87a"
-                                                        TextColor="Black"
-                                                        BindingContext="{Binding .}" />
-                                    </Frame>
-                                    <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Center" HasShadow="True" OutlineColor="{StaticResource NavigationPrimary}">
-                                        <Label  HorizontalOptions="StartAndExpand">
-                                            <Label.FormattedText>
-                                                <FormattedString>
-                                                    <Span Text="{Binding UserFullName}"
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid Padding="0,1,0,1" BackgroundColor="{StaticResource NavigationPrimary}" VerticalOptions="Fill" ColumnSpacing="1" RowSpacing="1" HorizontalOptions="FillAndExpand">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="70*"></ColumnDefinition>
+                                    <ColumnDefinition Width="30*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <BoxView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" BackgroundColor="#fafafa" Margin="1,0,0,0"></BoxView>
+                                <input:CheckBox Text="{Binding Name}"
+                                                Grid.Row="0" Grid.Column="0"
+                                                IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                                Type="Material"
+                                                IsPressed="False"
+                                                IsDisabled="True"
+                                                Margin="3,1,0,0"
+                                                VerticalOptions="Fill"
+                                                HorizontalOptions="StartAndExpand"
+                                                Color="#36b87a"
+                                                TextColor="Black"
+                                                BindingContext="{Binding .}" />
+                                <BoxView Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="1" BackgroundColor="#fafafa" Margin="0,0,1,0"></BoxView>
+                                <Label HorizontalOptions="StartAndExpand" Grid.Column="1" Grid.Row="0" VerticalOptions="Center" Margin="2,1,1,0">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{Binding UserFullName}"
                                                       TextColor="{StaticResource NavigationPrimary}"
                                                       TextDecorations="Underline">
-                                                        <Span.GestureRecognizers>
-                                                            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-                                                        </Span.GestureRecognizers>
-                                                    </Span>
-                                                </FormattedString>
-                                            </Label.FormattedText>
-                                        </Label>
-                                    </Frame>
-                                </StackLayout>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
+                                                <Span.GestureRecognizers>
+                                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                                                </Span.GestureRecognizers>
+                                            </Span>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
-    </ScrollView>
+    </StackLayout>
 </ContentPage>
