--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UserTaskOptionsPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UserTaskOptionsPage.xaml
@@ -1,39 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
-             mc:Ignorable="d"
              x:Class="Intouch.Edm.Views.UserTaskOptionsPage">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Style x:Key="LableStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="Black" />
-                <Setter Property="FontSize" Value="Medium" />
-                <Setter Property="HorizontalOptions" Value="Center"></Setter>
-                <Setter Property="VerticalOptions" Value="Center"></Setter>
-            </Style>
-        </ResourceDictionary>
-    </ContentPage.Resources>
-
-    <ScrollView>
-        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40*" />
-                        <ColumnDefinition Width="60*" />
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
-                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
-                </Grid>
-            </StackLayout>
-            <Label Text="Görev ve Görevli Kişiler" Font="Bold,25" Margin="0,15,0,5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
-            <Button CornerRadius="7"
+    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+            <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*" />
+                    <ColumnDefinition Width="60*" />
+                </Grid.ColumnDefinitions>
+                <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+            </Grid>
+        </StackLayout>
+        <Label Text="Görev ve Görevli Kişiler" Font="Bold,25" Margin="0,15,0,5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+        <Button CornerRadius="7"
                         FontSize="Large"
                         TextColor="White"
                         BackgroundColor="#00a9ab"
@@ -42,36 +27,45 @@
 						VerticalOptions="Fill"
 						Text="ARA - Kullanıcı ismi Dinamik"
                         Margin="3,5,3,50" />
-            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-                <ListView x:Name="TaskListView"
+        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+            <ListView x:Name="TaskListView"
                           ItemsSource="{Binding StatusRecords}"
                           HasUnevenRows="True"
                           SeparatorVisibility="None"
                           HorizontalOptions="FillAndExpand"
                           VerticalOptions="Fill"
                           Margin="20,10,20,0">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal">
-                                    <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Center" HasShadow="True" OutlineColor="{StaticResource NavigationPrimary}">
-                                        <input:CheckBox Text="{Binding Name}"
-                                                        IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                                                        Type="Material"
-                                                        IsEnabled="False"
-                                                        VerticalOptions="Center"
-                                                        HorizontalOptions="StartAndExpand"
-                                                        Color="#36b87a"
-                                                        LabelPosition="Before"
-                                                        TextColor="Black"
-                                                        BindingContext="{Binding .}" />
-                                    </Frame>
-                                </StackLayout>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal">
+
+                                <Grid Padding="0,1,0,1" BackgroundColor="{StaticResource NavigationPrimary}" VerticalOptions="Fill" ColumnSpacing="1" RowSpacing="1" HorizontalOptions="FillAndExpand">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <BoxView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" BackgroundColor="#fafafa" Margin="1,0,1,0"></BoxView>
+                                    <input:CheckBox Text="{Binding Name}"
+                                                    Grid.Row="0" Grid.Column="0"
+                                                    IsChecked="{Binding IsSelected, Mode=TwoWay}"
+                                                    Type="Material"
+                                                    IsPressed="False"
+                                                    IsDisabled="True"
+                                                    VerticalOptions="Fill"
+                                                    Margin="5,1,0,0"
+                                                    HorizontalOptions="StartAndExpand"
+                                                    Color="#36b87a"
+                                                    TextColor="Black"
+                                                    BindingContext="{Binding .}" />
+                                </Grid>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
-    </ScrollView>
+    </StackLayout>
 </ContentPage>
